[project]
name = "image-splitter-pro"
version = "1.0.0"
description = "Professional image cropping and splitting tool"
authors = [{name = "Abel Aramburo", website = "AbelXL.com"}]
requires-python = ">=3.8"

dependencies = [
    "pillow>=10.0.0",
    "ttkbootstrap>=1.10.0",
    "pillow-heif>=0.13.0",
    "send2trash>=1.8.0",
    "tkinterdnd2>=0.3.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]